Formatted some html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,10 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     
@@ -19,17 +19,17 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="E:\Myntra\assests\Myntra_logo2.png" width="25px"></a>
+        <a class="navbar-brand" href="#"><img src="https://github.com/AnanyaNagar/Headphones/blob/cdcec002799bc793f3dfdc4baff81af2cacbc03c/assests/Myntra_logo2.png" width="25px"></a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="index.html"><b>WOMEN</b></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="men.html"><b>MEN</b></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="kids.html"><b>KIDS</b></a>
             </li>
           </ul>
@@ -44,17 +44,18 @@
 
         <div class="row text-center heading">
             <div class="col-sm-12">
-                <h1 class="text-center">Kid's Eyeware</h1>
+                <h1 class="text-center">Eyeware</h1>
             </div>
         </div>
 
         <div class="row eyeware py-3">
-
+            
             <div class="col-lg-4 col-md-12 mb-4">
+            
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="E:\Myntra\assests\necklace.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -76,7 +77,7 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="E:\Myntra\assests\necklace.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -98,7 +99,81 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="E:\Myntra\assests\necklace.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row text-center heading">
+            <div class="col-sm-12">
+                <h1 class="text-center">Jewellery</h1>
+            </div>
+        </div>
+
+        <div class="row jewellery py-2">
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -118,23 +193,6 @@
 
         </div>
     </div>
-
-    <!-- <div class="container" id="product1">
-        <div class="row text-center">
-            <div class="col-sm-7">
-                <h1>Product</h1>
-                <img src="E:\Myntra\assests\necklace.jpg" alt="product image">
-            </div>
-            <div class="col-sm-5 text-center py-5">
-                <h1>Details</h1>
-                <h4><b>Zaveri Pearls</b></h4>
-                <h6>Traditional Stone Studded & Pearls Jewellery Set</h6>
-                <h4><b>Rs. 399</b></h4>
-                <p>Inclusive of all taxes</p>
-                <a href="#" class="btn btn-danger">Try it out!</a>
-            </div>
-        </div>
-    </div> -->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
