--- a/templates/womenj1.html
+++ b/templates/womenj1.html
@@ -36,7 +36,7 @@
         <div class="row text-center">
             <div class="col-sm-7">
                 <h1>Product</h1>
-                <img src="E:\Myntra\assests\necklace.jpg" alt="product image">
+                <img src="D:\Hack Your Way\Headphones\static\glasses.png" alt="product image">
             </div>
             <div class="col-sm-5 text-center py-5">
                 <h1>Details</h1>
