--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="womenj1.html">Try it out!</a>
                     </div>
                 </div>
             </div>
