--- a/templates/kids.html
+++ b/templates/kids.html
@@ -89,7 +89,7 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="kids1.html">Try it out!</a>
                     </div>
                 </div>
             </div>
