--- a/templates/index.html
+++ b/templates/index.html
@@ -23,14 +23,14 @@
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.html"><b>WOMEN</b></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="men.html"><b>MEN</b></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="kids.html"><b>KIDS</b></a>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <b>Category</b>
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item active" href="index.html">Eyeware</a>
+                    <a class="dropdown-item" href="caps.html">Caps</a>
+                </div>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -68,7 +68,7 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="specs">Try it out!</a>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger" href="womenj1.html">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="orangeGlass">Try it out!</a>
                     </div>
                 </div>
             </div>
@@ -118,81 +118,81 @@
             </div>
         </div>
 
-        <div class="row text-center heading">
-            <div class="col-sm-12">
-                <h1 class="text-center">Jewellery</h1>
-            </div>
-        </div>
+<!--        <div class="row text-center heading">-->
+<!--            <div class="col-sm-12">-->
+<!--                <h1 class="text-center">Eyeware</h1>-->
+<!--            </div>-->
+<!--        </div>-->
 
-        <div class="row jewellery py-2">
-            <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
-                    <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
-                    </div>
+<!--        <div class="row cap py-2">-->
+<!--            <div class="col-lg-4 col-md-12 mb-4">-->
+<!--                <div class="card card-cascade narrower text-center">-->
+<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
+<!--                    <div class="view view-cascade">-->
+<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">-->
+<!--                        <a>-->
+<!--                            <div class="mask img-gradient"></div>-->
+<!--                        </a>-->
+<!--                    </div>-->
 
-                    <!-- Card content -->
-                    <div class="card-body card-body-cascade">
-                        <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
-                        <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
-                    </div>
-                </div>
-            </div>
+<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
+<!--                    <div class="card-body card-body-cascade">-->
+<!--                        &lt;!&ndash; Label &ndash;&gt;-->
+<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
+<!--                        &lt;!&ndash; Text &ndash;&gt;-->
+<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
+<!--                        &lt;!&ndash; Button &ndash;&gt;-->
+<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
-                    <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
-                    </div>
+<!--            <div class="col-lg-4 col-md-12 mb-4">-->
+<!--                <div class="card card-cascade narrower text-center">-->
+<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
+<!--                    <div class="view view-cascade">-->
+<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">-->
+<!--                        <a>-->
+<!--                            <div class="mask img-gradient"></div>-->
+<!--                        </a>-->
+<!--                    </div>-->
 
-                    <!-- Card content -->
-                    <div class="card-body card-body-cascade">
-                        <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
-                        <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
-                    </div>
-                </div>
-            </div>
+<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
+<!--                    <div class="card-body card-body-cascade">-->
+<!--                        &lt;!&ndash; Label &ndash;&gt;-->
+<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
+<!--                        &lt;!&ndash; Text &ndash;&gt;-->
+<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
+<!--                        &lt;!&ndash; Button &ndash;&gt;-->
+<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card card-cascade narrower text-center">
-                    <!-- Card image -->
-                    <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
-                        <a>
-                            <div class="mask img-gradient"></div>
-                        </a>
-                    </div>
+<!--            <div class="col-lg-4 col-md-12 mb-4">-->
+<!--                <div class="card card-cascade narrower text-center">-->
+<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
+<!--                    <div class="view view-cascade">-->
+<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">-->
+<!--                        <a>-->
+<!--                            <div class="mask img-gradient"></div>-->
+<!--                        </a>-->
+<!--                    </div>-->
 
-                    <!-- Card content -->
-                    <div class="card-body card-body-cascade">
-                        <!-- Label -->
-                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
-                        <!-- Text -->
-                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
-                        <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
-                    </div>
-                </div>
-            </div>
+<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
+<!--                    <div class="card-body card-body-cascade">-->
+<!--                        &lt;!&ndash; Label &ndash;&gt;-->
+<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
+<!--                        &lt;!&ndash; Text &ndash;&gt;-->
+<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
+<!--                        &lt;!&ndash; Button &ndash;&gt;-->
+<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-        </div>
-    </div>
+<!--        </div>-->
+<!--    </div>-->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
