Added more accessories. Pics are now visible on web page

--- a/templates/caps.html
+++ b/templates/caps.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caps Page</title>
+    <title>Headware</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     
@@ -18,7 +18,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="E:\Myntra\assests\Myntra_logo2.png" width="25px"></a>
+        <a class="navbar-brand" href="#"><img src="static/Myntra_logo2.png" width="25px"></a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -47,13 +47,13 @@
             </div>
         </div>
 
-        <div class="row eyeware py-3">
+        <div class="row caps py-3">
 
             <div class="col-lg-4 col-md-12 mb-4">
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\cap1.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/cap1.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -75,7 +75,7 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\cap1.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/cap2.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -88,7 +88,7 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="cap2">Try it out!</a>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\cap1.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/crown.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -110,7 +110,139 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="crown">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/headband.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="headband">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/cap3.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="cap3">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/cap4.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="cap4">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/cap5.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="cap5">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/cap6.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="cap6">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/cap7.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="cap7">Try it out!</a>
                     </div>
                 </div>
             </div>
