--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Eyeware</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="static/style.css">
     
 </head>
 <body>
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#"><img src="https://github.com/AnanyaNagar/Headphones/blob/cdcec002799bc793f3dfdc4baff81af2cacbc03c/assests/Myntra_logo2.png" width="25px"></a>
+        <a class="navbar-brand" href="#"><img src="static/Myntra_logo2.png" width="25px"></a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -55,7 +55,29 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/glass1.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="glass1">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/specs.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -77,7 +99,7 @@
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/orangeGlass.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -96,10 +118,11 @@
             </div>
 
             <div class="col-lg-4 col-md-12 mb-4">
+            
                 <div class="card card-cascade narrower text-center">
                     <!-- Card image -->
                     <div class="view view-cascade">
-                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">
+                        <img class="card-img-top" src="static/glass2.png" alt="Card image cap">
                         <a>
                             <div class="mask img-gradient"></div>
                         </a>
@@ -112,87 +135,106 @@
                         <!-- Text -->
                         <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
                         <!-- Button -->
-                        <a class="btn btn-outline-danger">Try it out!</a>
+                        <a class="btn btn-outline-danger" href="glass2">Try it out!</a>
                     </div>
                 </div>
             </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+            
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/glass3.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="glass3">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+            
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/glass4.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="glass4">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+            
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/specs1.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="specs1">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-12 mb-4">
+            
+                <div class="card card-cascade narrower text-center">
+                    <!-- Card image -->
+                    <div class="view view-cascade">
+                        <img class="card-img-top" src="static/specs2.png" alt="Card image cap">
+                        <a>
+                            <div class="mask img-gradient"></div>
+                        </a>
+                    </div>
+
+                    <!-- Card content -->
+                    <div class="card-body card-body-cascade">
+                        <!-- Label -->
+                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>
+                        <!-- Text -->
+                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>
+                        <!-- Button -->
+                        <a class="btn btn-outline-danger" href="specs2">Try it out!</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
+    </div>
 
-<!--        <div class="row text-center heading">-->
-<!--            <div class="col-sm-12">-->
-<!--                <h1 class="text-center">Eyeware</h1>-->
-<!--            </div>-->
-<!--        </div>-->
-
-<!--        <div class="row cap py-2">-->
-<!--            <div class="col-lg-4 col-md-12 mb-4">-->
-<!--                <div class="card card-cascade narrower text-center">-->
-<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
-<!--                    <div class="view view-cascade">-->
-<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">-->
-<!--                        <a>-->
-<!--                            <div class="mask img-gradient"></div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
-<!--                    <div class="card-body card-body-cascade">-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
-<!--                        &lt;!&ndash; Text &ndash;&gt;-->
-<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
-<!--                        &lt;!&ndash; Button &ndash;&gt;-->
-<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="col-lg-4 col-md-12 mb-4">-->
-<!--                <div class="card card-cascade narrower text-center">-->
-<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
-<!--                    <div class="view view-cascade">-->
-<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\glasses.png" alt="Card image cap">-->
-<!--                        <a>-->
-<!--                            <div class="mask img-gradient"></div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
-<!--                    <div class="card-body card-body-cascade">-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
-<!--                        &lt;!&ndash; Text &ndash;&gt;-->
-<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
-<!--                        &lt;!&ndash; Button &ndash;&gt;-->
-<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="col-lg-4 col-md-12 mb-4">-->
-<!--                <div class="card card-cascade narrower text-center">-->
-<!--                    &lt;!&ndash; Card image &ndash;&gt;-->
-<!--                    <div class="view view-cascade">-->
-<!--                        <img class="card-img-top" src="D:\Hack Your Way\Headphones\static\specs.png" alt="Card image cap">-->
-<!--                        <a>-->
-<!--                            <div class="mask img-gradient"></div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-
-<!--                    &lt;!&ndash; Card content &ndash;&gt;-->
-<!--                    <div class="card-body card-body-cascade">-->
-<!--                        &lt;!&ndash; Label &ndash;&gt;-->
-<!--                        <h5 class="pink-text pb-2 pt-1"><i class="fa fa-cutlery"></i> Zaveri Pearls</h5>-->
-<!--                        &lt;!&ndash; Text &ndash;&gt;-->
-<!--                        <p class="card-text">Jewellery Set</p></br><b>Rs. 399</b></p>-->
-<!--                        &lt;!&ndash; Button &ndash;&gt;-->
-<!--                        <a class="btn btn-outline-danger">Try it out!</a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--    </div>-->
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
